--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     let editIdx = null;
 
     // --- REPLACE WITH SIMPLE TOGGLE (TEMPORARY, BACKEND AUTH LATER) ---
-adminPanelToggle.onclick = () => {
+adminPanelToggle.onclick = loginAdmin;
   if (adminPanel.style.display === 'flex') {
     adminPanel.style.display = 'none';
   } else {
@@ -625,7 +625,35 @@ adminPanelToggle.onclick = () => {
   }
 </style>
 
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
 
+  const firebaseConfig = {
+    apiKey: "AIzaSyAnr5Znx1UHaitcWEAIpsc1kxCrqdjJRX0",
+    authDomain: "nk-enterprise-9036b.firebaseapp.com",
+    projectId: "nk-enterprise-9036b",
+    storageBucket: "nk-enterprise-9036b.firebasestorage.app",
+    messagingSenderId: "350955635615",
+    appId: "1:350955635615:web:ae0b50ccffcf19377673aa"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  window.loginAdmin = async function () {
+    const email = prompt("Enter admin email:");
+    const password = prompt("Enter admin password:");
+    try {
+      const userCred = await signInWithEmailAndPassword(auth, email, password);
+      alert("✅ Login Success!");
+      document.getElementById("adminPanel").style.display = "flex";
+    } catch (error) {
+      alert("❌ Invalid credentials!");
+      console.log(error.message);
+    }
+  };
+</script>
 
 
 </body>
