--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@
   <!-- Admin Panel Toggle Button -->
   <button class="admin-panel-toggle" id="adminPanelToggle">Admin Panel</button>
   <!-- Admin Panel -->
+  <div id="productContainer" class="product-grid"></div>
+
   <div class="admin-panel" id="adminPanel">
     <h3>Product Manager</h3>
     <form id="adminProductForm">
