--- a/index.html
+++ b/index.html
@@ -692,23 +692,27 @@ adminPanelToggle.onclick = loginAdmin;
     }
 
     // FETCH PRODUCTS & SHOW
-    async function fetchAndRenderProducts() {
-      const productList = document.getElementById("productContainer");
-      productList.innerHTML = "";
-      const querySnapshot = await getDocs(collection(db, "products"));
-      querySnapshot.forEach((doc) => {
-        const p = doc.data();
-        const card = `
-          <div class="product-card">
-            <img src="${p.image}" alt="${p.name}">
-            <h3>${p.name}</h3>
-            <p>${p.desc}</p>
-            <strong>₹${p.price}</strong>
-            ${p.badge ? `<span class="badge">${p.badge}</span>` : ""}
-          </div>`;
-        productList.innerHTML += card;
-      });
-    }
+ async function fetchProducts() {
+  const productContainer = document.getElementById("productContainer");
+  productContainer.innerHTML = "";
+  const querySnapshot = await getDocs(collection(db, "products"));
+
+  querySnapshot.forEach((doc) => {
+    const p = doc.data();
+    const card = `
+      <div class="product-card">
+        ${p.badge ? `<span class="badge">${p.badge}</span>` : ""}
+        <img src="${p.image}" alt="${p.name}" />
+        <h3>${p.name}</h3>
+        <p>${p.desc}</p>
+        <strong>₹${p.price}</strong>
+        <a class="whatsapp-order" href="https://wa.me/917393004572?text=I'm interested in ${encodeURIComponent(p.name)} (₹${p.price}). Please provide details." target="_blank">
+          <button>Order on WhatsApp</button>
+        </a>
+      </div>`;
+    productContainer.innerHTML += card;
+  });
+}
 
     fetchAndRenderProducts(); // call on page load
   });
