--- a/index.html
+++ b/index.html
@@ -713,7 +713,8 @@ adminPanelToggle.onclick = loginAdmin;
     productContainer.innerHTML += card;
   });
 }
-
+ fetchAndRenderProducts(); // call on page load
+  });
    
 </script>
 
